# rust-service

./: .env.example  Cargo.toml  README.md  docker-compose.yml  rustfmt.toml  start.sh
src/: db.rs  globals.rs  http.rs  kafka.rs  main.rs
