[package]
name = "rust-service"
version = "0.1.0"
authors = ["slvrtrn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.14", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }
envy = "0.4"
anyhow = "1.0"
serde = "1.0.130"
lazy_static = "1.4.0"
env_logger = "0.9.0"
log = "0.4.14"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.17"
sqlx = { version = "0.5.9", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }